# lib/api-spec/openapi.yaml
@@ -716,6 +716,8 @@ components:
           type: ["string", "null"]
         deliveryAddress:
           type: ["string", "null"]
+        boxMessage:
+          type: ["string", "null"]
         telegramId:
           type: ["string", "null"]
         telegramUsername:
@@ -762,6 +764,8 @@ components:
         deliveryEmail:
           type: string
         deliveryAddress:
+          type: string
+        boxMessage:
           type: string
         telegramId:
           type: string
